# End-to-End-Conversational-RagChatbot

./: Dockerfile  README.md  pyproject.toml  requirements.txt
app/api/: fastapi_app.py
app/db/: mango_database.py
app/prompts/: chain_prompt.txt  history_prompt.txt
app/services/: preprocess.py  rag_chain.py  rag_chatbot.py
config/: params.yaml
frontend/: streamlit_app.py
